Modified and added to Tom's Code,Angular CRUD,Angular 5 Pages, Angular Security

--- a/client/src/app/pages/about/about.component.html
+++ b/client/src/app/pages/about/about.component.html
@@ -1,1 +1,25 @@
-<app-base-page></app-base-page>>
+<div class="container">
+    <div class="jumbotron">
+      <app-base-page></app-base-page>
+      <img src="\assets\images\abdulshukor.jpg" />
+
+      <p class="lead">
+        Hi there! I’m Abdul Shukor from Toronto, Canada. I’m doing software engineering technology three years course at
+          Centennial College. Currently, I’m in the last semester of the course, and I will be graduating in 2019-04-23 with
+           honours designation. I am a passionate individual who is driven by curiosity and a desire to learn, embracing
+           inclusion and committed to leading high performing teams in a culture of excellence with integrity and has a
+           practical approach to problem-solving and a drive to see things through to completion. Besides, I am a fast
+           learner and an excellent listener. I have excellent interpersonal and communication skills and I am a very
+           social, friendly and respectful person toward others.
+
+      </p>
+      <p class="lead">
+          I have done several academic projects throughout the course, some of them I listed in the Projects page. During the
+          course and implementation of these projects I obtained knowledge on the following Technical skills.
+
+     </p>
+
+
+
+  </div>
+</div>
