--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -1,1 +1,21 @@
-<app-base-page></app-base-page>
+<div class="container">
+  <div class="jumbotron">
+    <app-base-page></app-base-page>
+    <h4>Hello, Welcome to <b>Abdul Shukor</b> Portfolio Website!</h4>
+
+    <p class="lead">
+      The purpose of this website is to advertise myself. This site covers:
+    </p>
+    <ol>
+      <li>Biography about myself. <a routerLink="/about">About Me</a></li>
+      <li>My Projects. <a routerLink="/projects">Projects</a></li>
+      <li>Services that I offer. <a routerLink="/services">Services</a></li>
+      <li>Contact me Page. <a routerLink="/contact">Contact</a></li>
+    </ol>
+
+    <p class="lead">
+      To find out more about me, please navigate over to the
+      <a routerLink="/about">About Me</a> page.
+    </p>
+  </div>
+</div>
