--- a/client/src/app/pages/services/services.component.html
+++ b/client/src/app/pages/services/services.component.html
@@ -1,1 +1,5 @@
-<app-base-page></app-base-page>>
+<app-base-page></app-base-page>
+
+
+ <p class="lead">The purpose of this website is to advertise myself. This site covers: </p>
+
