--- a/client/src/app/partials/footer/footer.component.html
+++ b/client/src/app/partials/footer/footer.component.html
@@ -1,3 +1,15 @@
-<div class="navbar fixed-bottom navbar-light bg-light">
-  <h6>&copy; Abdul Shukor {{ year }}. All Rights Reserved</h6>
+<!-- <div class="navbar fixed-bottom navbar-light bg-light text-center">
+
+<div class="footer-copyright text-center  py-1"style="background-color: #000000 ;color:white;" ><h6>&copy; Abdul Shukor {{ year }}. All Rights Reserved</h6>
 </div>
+</div> -->
+<footer class="page-footer font-small mdb-color fixed-bottom lighten-3 pt-4">
+  <div class="text-center py-1 " style="background-color: #000000;">
+    <a routerLink="/about" style="color:white">About Me</a>
+  </div>
+  <div
+    class="footer-copyright text-center  py-1"
+    style="background-color: #000000 ;color:white;">
+    &copy; Copyright {{ year }} Abdul Shukor. All Rights Reserved.
+  </div>
+</footer>
