--- a/client/src/app/partials/header/header.component.html
+++ b/client/src/app/partials/header/header.component.html
@@ -1,4 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav
+  class="navbar navbar-expand-lg navbar-dark "
+  style="background-color: #000000;"
+>
   <a class="navbar-brand" routerLink="/">Abdul Shukor Portfolio</a>
   <button
     class="navbar-toggler"
@@ -16,9 +19,8 @@
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
         <a class="nav-link" routerLink="/"
-          ><i class="fas fa-lg fa-igloo"></i> Home
-      </a
-        >
+          ><i class="fa fa-lg fa-home"></i> Home
+        </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/about"
@@ -26,13 +28,13 @@
         >
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/products"
-          ><i class="fa fa-lg fa-briefcase"></i> Products</a
+        <a class="nav-link" routerLink="/projects"
+          ><i class="fa fa-lg fa-laptop"></i> Projects</a
         >
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/services"
-          ><i class="fa fa-lg fa-birthday-cake"></i> Services</a
+          ><i class="fa fa-lg fa-wrench"></i>Services</a
         >
       </li>
       <li class="nav-item">
@@ -41,16 +43,24 @@
         >
       </li>
 
+      <li
+        *ngIf="isLoggedIn()"
+        class="navbar-text text-success ml-5 mr-5 d-none d-lg-inline"
+      >
+        <i class="fas fa-lg fa-user"></i> Welcome, {{ user.displayName }}
+      </li>
 
-        <li *ngIf="isLoggedIn()" class="navbar-text text-success ml-5 mr-5 d-none d-lg-inline"><i class="fas fa-lg fa-user"></i>
-          Welcome, {{ user.displayName }}</li>
+      <li *ngIf="isLoggedIn()" class="nav-item">
+        <a (click)="onLogoutClick()" routerLink="/logout" class="nav-link">
+          <i class="fas fa-lg fa-sign-out-alt"></i> Logout</a
+        >
+      </li>
 
-        <li *ngIf="isLoggedIn()" class="nav-item"><a (click)="onLogoutClick()" routerLink="/logout" class="nav-link">
-          <i class="fas fa-lg fa-sign-out-alt"></i> Logout</a></li>
-
-        <li *ngIf="!isLoggedIn()" class="nav-item"><a routerLink="/login" class="nav-link">
-          <i class="fas fa-lg fa-sign-in-alt"></i> Login</a></li>
-
+      <li *ngIf="!isLoggedIn()" class="nav-item">
+        <a routerLink="/login" class="nav-link">
+          <i class="fas fa-lg fa-sign-in-alt"></i> Login</a
+        >
+      </li>
     </ul>
   </div>
 </nav>
