Modified the pages

--- a/client/src/app/pages/about/about.component.html
+++ b/client/src/app/pages/about/about.component.html
@@ -1,8 +1,6 @@
 <div class="container">
     <div class="jumbotron">
-      <app-base-page></app-base-page>
       <img src="\assets\images\abdulshukor.jpg" />
-
       <p class="lead">
         Hi there! I’m Abdul Shukor from Toronto, Canada. I’m doing software engineering technology three years course at
           Centennial College. Currently, I’m in the last semester of the course, and I will be graduating in 2019-04-23 with
@@ -20,6 +18,42 @@
      </p>
 
 
+    <li>Web Application Development: C#, Asp.net, .Net Core 2.1, JavaScript, Typescript, Java,
+      HTML5/XML, JSON, CSS, Bootstrap.
+    </li>
+    <li>Web API, Restful API, Swagger, Postman</li>
+    <li> Apigee Edge: API Proxy, API Traffic management, Drupal Developer Portal,
+      Authentication, API analytics, MicroGateway, and API Security. </li>
+    <li>Android App development: Java, XML.</li>
+    <li>Databases: Oracle SQL, PL/SQL, MySQL, Microsoft SQL Server.</li>
+    <li>AWS development: EC2, Lambda, Elastic Beanstalk, S3, RDS, DynamoDB, Route 53, IAM, CloudWatch.</li>
+    <li>Business Intelligence: Data Mining, SSIS, SSRS, SSAS, ETL.</li>
+    <li>Web Application Security: Software Security, Security Strategies in Web Applications.</li>
+    <li>Microsoft Office: Excel, Word, PowerPoint, Access. </li>
+    <li>Software Testing & Quality: Selenium, TestNG, Maven, Jenkins.</li>
+    <li> Software Methodologies: Agile Methodologies and UML language skills.</li>
+    <li>Operating Systems: Unix/Linux, Windows.</li>
+    <li> Version Control: Git, GitHub.</li>
+    <li> Basics of Computer Networking. </li>
+    <li>Statistical Analysis System (SAS).</li>
+    <li>Project Management: WBS, Budget and Schedule, Stakeholders Management Plan, Quality Management Plan,
+      Risk Management Plan.</li>
+    <li>Development Tools: Microsoft Expression Web, Visual Studio, Visual Studio Code, Android Studio,
+    Eclipse, Visual Paradigm, Visio, IntelliJ.)</li>
 
+
+
+     <h4 class="display-6">I have done some professional online courses form Udemy.com.</h4>
+         <ol>
+          <li>C# (Completed, Dec.2017)</li>
+          <li>Oracle SQL (Completed,  May.2017)</li>
+          <li>Oracle PL/SQL (Completed, Nov.2017)</li>
+          <li>Java (Completed, Feb.2019)</li>
+          <li>Selenium WebDriver with Java - Basics to Advanced (Completed,  Aug.2018) </li>
+         </ol>
+     <!--the button for downloading my resume-->
+<h5>Download my updated resume</h5>
+<a routerLink="assets\documents\abdul_shukor_resume.pdf" download><button class="btn btn-outline-primary"><i class="fa fa-download"></i>&nbsp; Resume</button></a>
+<hr class="my-9" />
   </div>
 </div>
