--- a/client/src/app/partials/header/header.component.html
+++ b/client/src/app/partials/header/header.component.html
@@ -2,7 +2,9 @@
   class="navbar navbar-expand-lg navbar-dark "
   style="background-color: #000000;"
 >
-  <a class="navbar-brand" routerLink="/">Abdul Shukor Portfolio</a>
+  <a class="navbar-brand" routerLink="/">
+    <img src="\assets\images\abdul.jpg" height="55" width="200" />
+  </a>
   <button
     class="navbar-toggler"
     type="button"
