Added content to the pages

--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -1,6 +1,9 @@
+<!--Abdul Shukor
+   StudentID300919831
+   Date:2019-03-30-->
+
 <div class="container">
   <div class="jumbotron">
-    <app-base-page></app-base-page>
     <h4>Hello, Welcome to <b>Abdul Shukor</b> Portfolio Website!</h4>
 
     <p class="lead">
