--- a/client/src/app/partials/footer/footer.component.html
+++ b/client/src/app/partials/footer/footer.component.html
@@ -1,3 +1,8 @@
+<!--Abdul Shukor
+   StudentID300919831
+   Date:2019-03-30-->
+
+
 <!-- <div class="navbar fixed-bottom navbar-light bg-light text-center">
 
 <div class="footer-copyright text-center  py-1"style="background-color: #000000 ;color:white;" ><h6>&copy; Abdul Shukor {{ year }}. All Rights Reserved</h6>
