--- a/client/src/app/pages/about/about.component.html
+++ b/client/src/app/pages/about/about.component.html
@@ -1,3 +1,6 @@
+<!--Abdul Shukor
+   StudentID:300919831
+   Date:2019-03-30-->
 <div class="container">
     <div class="jumbotron">
       <img src="\assets\images\abdulshukor.jpg" />
