--- a/client/src/app/pages/contact/contact.component.html
+++ b/client/src/app/pages/contact/contact.component.html
@@ -1,4 +1,19 @@
-<app-base-page></app-base-page>>
+<!--Abdul Shukor
+   StudentID300919831
+   Date:2019-03-30-->
+<!--Abdul Shukor
+   StudentID300919831
+   Date:2019-03-30-->
+   <div class="container">
+      <div class="jumbotron">
+
+         <i class="fa fa-map-marker fa-2x"></i><p>Toronto,Canada</p>
+          <i class="fa fa-phone  fa-2x"></i> <p>+ 416-456-4101</p>
+          <i class="fa fa-envelope fa-2x"></i> <p>ashukoor12@gmail.com</p>
+
+          <p class ="lead">Looking forward to answering your email.</p>
+
+
 <div *ngIf="isLoggedIn()" class="container">
   <div class="row">
     <div class="col col-md-6">
@@ -10,4 +25,6 @@
       </div>
     </div>
   </div>
+</div>
+</div>
 </div>
