--- a/client/src/app/pages/services/services.component.html
+++ b/client/src/app/pages/services/services.component.html
@@ -1,5 +1,159 @@
-<app-base-page></app-base-page>
+<!--Abdul Shukor
+   StudentID300919831
+   Date:2019-03-30-->
+<div class="container">
+    <div class="jumbotron">
+        <h4 class=display-5><b>I provide the following services.</b></h4>
+        <div class="row">
+          <!--Grid column-->
+      <div class="col-lg-4 col-md-12 mb-4">
+
+          <!--Image 1-->
+          <div class="view overlay z-depth-1-half">
+                  <a routerLink="/services">
+              <img src="\assets\images\mobile.jpg" class="img-fluid"
+                  alt="">
+                  <div class="mask rgba-white-light"></div>
+              </a>
+              <p class="lead">Android Apps development</p>
+          </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6 mb-4">
+          <!--Image 2-->
+          <div class="view overlay z-depth-1-half">
+                  <a routerLink="/services">
+                          <img src="\assets\images\sele.jpg" class="img-fluid"
+                  alt="">
+                  <div class="mask rgba-white-light"></div>
+              </a>
+              <p class="lead">Software Testing & Quality, Selenium Automation Testing</p>
+
+          </div>
+      </div>
+          <!--Grid column-->
+      <div class="col-lg-4 col-md-6 mb-4">
+
+          <!--Image 3-->
+          <div class="view overlay z-depth-1-half">
+                  <a routerLink="/services">
+
+              <img src="\assets\images\bi.jpg" class="img-fluid"
+                  alt="">
+
+                  <div class="mask rgba-white-light"></div>
+              </a>
+              <p class="lead">Business Intelligence</p>
+
+          </div>
+
+      </div>
+      <!--Grid column-->
+        <!--Grid column-->
+      <div class="col-lg-4 col-md-12 mb-4">
+
+          <!--Image 4-->
+          <div class="view overlay z-depth-1-half">
+                  <a routerLink="/services">
+
+              <img src="\assets\images\aws.jpg" class="img-fluid"
+                  alt="">
+
+                  <div class="mask rgba-white-light"></div>
+              </a>
+              <p class="lead">AWS development</p>
+          </div>
+
+      </div>
+      <!--Grid column-->
+      <!--Grid column-->
+      <div class="col-lg-4 col-md-6 mb-4">
+
+          <!--Image 5-->
+          <div class="view overlay z-depth-1-half">
+                  <a routerLink="/services">
+
+              <img src="\assets\images\web.jpg" class="img-fluid"
+                  alt="">
+
+                  <div class="mask rgba-white-light"></div>
+              </a>
+              <p class="lead">Web Application Development</p>
+
+          </div>
+
+      </div>
+      <!--Grid column-->
+      <!--Grid column-->
+      <div class="col-lg-3 col-md-6 mb-4">
+
+          <!--Image 6-->
+          <div class="view overlay z-depth-1-half bg-white">
+                  <a routerLink="/services">
+
+              <img src="/assets\images\db.jpg " class="img-fluid"
+                  alt="">
+                  <div class="mask rgba-white-light"></div>
+              </a>
+
+          </div>
+          <p class="lead">Database Development (Oracle SQL, PL/SQL, MySQL, Microsoft SQL Server and MongoDB)</p>
+
+      </div>
+      <!--Grid column-->
+
+      <div class="col-lg-4 col-md-6 mb-4">
+
+          <!--Image 6-->
+          <div class="view overlay z-depth-1-half">
+                  <a routerLink="/services">
+
+              <img src="\assets\images\apigee.jpg " class="img-fluid"
+                  alt="">
+                  <div class="mask rgba-white-light"></div>
+              </a>
+              <p class="lead">Apigee API Security Management</p>
+
+          </div>
+
+      </div>
+      <div class="col-lg-4 col-md-6 mb-4">
+
+        <!--Image 6-->
+        <div class="view overlay z-depth-1-half">
+                <a routerLink="/services">
+
+            <img src="\assets\images\mean.jpg " class="img-fluid"
+                alt="">
+                <div class="mask rgba-white-light"></div>
+            </a>
+            <p class="lead">Mean Stack Development</p>
+
+        </div>
+
+    </div>
+
+    <div class="col-lg-4 col-md-6 mb-4">
+
+      <!--Image 6-->
+      <div class="view overlay z-depth-1-half">
+              <a routerLink="/services">
+
+          <img src="\assets\images\api.jpg " class="img-fluid"
+              alt="">
+              <div class="mask rgba-white-light"></div>
+          </a>
+
+      </div>
+      <p class="lead">Web API and Restful API Development</p>
+
+  </div>
+     </div>
+    </div>
+</div>
 
 
- <p class="lead">The purpose of this website is to advertise myself. This site covers: </p>
+
+
+
 
