Modified Pages code

--- a/client/src/app/pages/about/about.component.html
+++ b/client/src/app/pages/about/about.component.html
@@ -4,9 +4,11 @@
 <div class="container">
     <div class="jumbotron">
       <img src="\assets\images\abdulshukor.jpg" />
+
       <p class="lead">
-        Hi there! I’m Abdul Shukor from Toronto, Canada. I’m doing software engineering technology three years course at
-          Centennial College. Currently, I’m in the last semester of the course, and I will be graduating in 2019-04-23 with
+        <br>
+        Hi there! I’m Abdul Shukor from Toronto, Canada. I’m doing software engineering technology three years program at
+          Centennial College. Currently, I’m in the last semester of the program, and I will be graduating in 2019-04-23 with
            honours designation. I am a passionate individual who is driven by curiosity and a desire to learn, embracing
            inclusion and committed to leading high performing teams in a culture of excellence with integrity and has a
            practical approach to problem-solving and a drive to see things through to completion. Besides, I am a fast
@@ -15,19 +17,18 @@
 
       </p>
       <p class="lead">
-          I have done several academic projects throughout the course, some of them I listed in the Projects page. During the
-          course and implementation of these projects I obtained knowledge on the following Technical skills.
+          I have done several academic projects throughout the program in the Centennial College, some of them I listed in the Projects page. During the
+          program and implementation of these projects I obtained knowledge on the following Technical skills.
 
      </p>
 
 
-    <li>Web Application Development: C#, Asp.net, .Net Core 2.1, JavaScript, Typescript, Java,
-      HTML5/XML, JSON, CSS, Bootstrap.
+    <li>Web Application and Android App Development: C#, Asp.net, .Net Core 2.1, JavaScript,
+      Typescript, Java, HTML5/XML, JSON, CSS, Bootstrap, Web API,Restful API, Swagger, Postman, Agile Methodologies, and UML language skills.
     </li>
     <li>Web API, Restful API, Swagger, Postman</li>
     <li> Apigee Edge: API Proxy, API Traffic management, Drupal Developer Portal,
       Authentication, API analytics, MicroGateway, and API Security. </li>
-    <li>Android App development: Java, XML.</li>
     <li>Databases: Oracle SQL, PL/SQL, MySQL, Microsoft SQL Server.</li>
     <li>AWS development: EC2, Lambda, Elastic Beanstalk, S3, RDS, DynamoDB, Route 53, IAM, CloudWatch.</li>
     <li>Business Intelligence: Data Mining, SSIS, SSRS, SSAS, ETL.</li>
@@ -42,11 +43,11 @@
     <li>Project Management: WBS, Budget and Schedule, Stakeholders Management Plan, Quality Management Plan,
       Risk Management Plan.</li>
     <li>Development Tools: Microsoft Expression Web, Visual Studio, Visual Studio Code, Android Studio,
-    Eclipse, Visual Paradigm, Visio, IntelliJ.)</li>
+    Eclipse, Visual Paradigm, Visio, IntelliJ.</li>
 
 
 
-     <h4 class="display-6">I have done some professional online courses form Udemy.com.</h4>
+     <h5 class="display-6">I have done some professional online courses form Udemy.com.</h5>
          <ol>
           <li>C# (Completed, Dec.2017)</li>
           <li>Oracle SQL (Completed,  May.2017)</li>
@@ -56,7 +57,7 @@
          </ol>
      <!--the button for downloading my resume-->
 <h5>Download my updated resume</h5>
-<a routerLink="assets\documents\abdul_shukor_resume.pdf" download><button class="btn btn-outline-primary"><i class="fa fa-download"></i>&nbsp; Resume</button></a>
+<a href="/assets/documents/abdul_shukor_resume.pdf" download><button class="btn btn-outline-primary"><i class="fa fa-download"></i>&nbsp; Resume</button></a>
 <hr class="my-9" />
   </div>
 </div>
