--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -7,7 +7,7 @@
     <h4>Hello, Welcome to <b>Abdul Shukor</b> Portfolio Website!</h4>
 
     <p class="lead">
-      The purpose of this website is to advertise myself. This site covers:
+      The purpose of this website is to advertise myself . This site covers:
     </p>
     <ol>
       <li>Biography about myself. <a routerLink="/about">About Me</a></li>
@@ -19,6 +19,9 @@
     <p class="lead">
       To find out more about me, please navigate over to the
       <a routerLink="/about">About Me</a> page.
+
     </p>
+    <hr class="my-9" />
+
   </div>
 </div>
