--- a/client/src/app/pages/projects/projects.component.html
+++ b/client/src/app/pages/projects/projects.component.html
@@ -7,6 +7,7 @@
         <img src="\assets\images\andriod.jpg" class="img-fluid" alt="Responsive image" />
 
         <p class="lead">
+          <br>
           I created a Flash Chat app, which is a real massaging app like WhatsApp or Facebook messenger. For creating this app, I used Java, XML, and google Firebase database for storing user SMS and credentials. I developed this app using the android studio. I
           developed this project by myself and the purpose of this app to create something comparable to Facebook massager.
         </p>
@@ -16,6 +17,7 @@
         <img src="\assets\images\workforce.jpg" class="img-fluid" alt="Responsive image" />
 
         <p class="lead">
+          <br>
             I created a WorkForce web API for unemployment educated people who are looking for a job.
           The WorkForce API is securely accessing unemployed employee data from AWS-RDS database.
           The potential customer of the WorkForce is an employer, but it can be consumedfor many
@@ -27,22 +29,23 @@
 
         <div class="alert  alert-secondary" role="alert"><h4>3. eAppointment </h4></div>
 
-        <h5> ERD Diagram</h5>
+        <h5> ERD Diagram</h5><br>
     <!-- fluid make images responsive for differnt types of screen-->
 
         <img src="\assets\images\ERDeAppointment.jpg"class="img-fluid" alt="Responsive image" />
-        <h5> Domain Class Diagram</h5>
+        <h5> Domain Class Diagram</h5><br>
     <!-- fluid make images responsive for differnt types of screen-->
 
         <img src="\assets\images\domainCD.jpg" class="img-fluid" alt="Responsive image" />
 
         <p class="lead">
+          <br>
             It was a software development project, designed for an online doctor appointment application with
             eight subsystems which will enable users to find the nearest doctors and at the earliest possible time to
             set doctor’s appointments. Using, UML Language, and Agile methodology. It was a group project and my role was
             creating use case diagram, use case description, ERD diagram, and domain class diagram.
         </p>
-<hr class="my-9" />
-
+       <hr class="my-9"/>
    </div>
+
 </div>
