--- a/client/src/app/partials/footer/footer.component.html
+++ b/client/src/app/partials/footer/footer.component.html
@@ -8,9 +8,12 @@
 <div class="footer-copyright text-center  py-1"style="background-color: #000000 ;color:white;" ><h6>&copy; Abdul Shukor {{ year }}. All Rights Reserved</h6>
 </div>
 </div> -->
-<footer class="page-footer font-small mdb-color fixed-bottom lighten-3 pt-4">
+<footer class="page-footer font-small mdb-color fixed-bottom lighten-3 pt-">
   <div class="text-center py-1 " style="background-color: #000000;">
-    <a routerLink="/about" style="color:white">About Me</a>
+    <!--<a routerLink="/about" style="color:white">About Me</a>-->
+    <a href="https://www.facebook.com"  target="_blank" title="Facebook Page" class="fa-lg"><i class="fab fa-facebook-square" style="color:white"></i></a>&nbsp;
+    <a href="https://twitter.com" target="_blank" title="Twitter" class="fa-lg"> <i class="fab fa-twitter-square" style="color:white"></i></a>&nbsp;
+    <a href="https://www.linkedin.com" target="_blank" title="Linkedin" class="fa-lg"> <i class="fab fa-linkedin" style="color:white"></i></a>
   </div>
   <div
     class="footer-copyright text-center  py-1"
