--- a/server/views/partials/footer.ejs
+++ b/server/views/partials/footer.ejs
@@ -1,4 +1,5 @@
 <!-- JavaScript Section -->
+<!--Abdul Shukor:ID 300919831-->
     <script src="/jquery/dist/jquery.min.js"></script>
     <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/Scripts/app.js"></script>
