--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+    <!--Abdul Shukor:ID 300919831-->
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -12,7 +14,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="/">COMP308</a>
+      <a class="navbar-brand" href="/">Abdul Shukor</a>
       <button
         class="navbar-toggler"
         type="button"
