--- a/client/src/app/partials/header/header.component.html
+++ b/client/src/app/partials/header/header.component.html
@@ -53,18 +53,18 @@
         *ngIf="isLoggedIn()"
         class="navbar-text text-success ml-5 mr-5 d-none d-lg-inline"
       >
-        <i class="fas fa-lg fa-user"></i> Welcome, {{ user.displayName }}
+      <i class="fas fa-lg fa-portrait"></i> Welcome, {{ user.displayName }}
       </li>
 
       <li *ngIf="isLoggedIn()" class="nav-item">
         <a (click)="onLogoutClick()" routerLink="/logout" class="nav-link">
-          <i class="fas fa-lg fa-sign-out-alt"></i> Logout</a
+          <i class="fas fa-lg fa-arrow-left"></i> Logout</a
         >
       </li>
 
       <li *ngIf="!isLoggedIn()" class="nav-item">
         <a routerLink="/login" class="nav-link">
-          <i class="fas fa-lg fa-sign-in-alt"></i> Login</a
+          <i class="fas fa-lg fa-arrow-right"></i> Login</a
         >
       </li>
     </ul>
