--- a/server/views/auth/register.ejs
+++ b/server/views/auth/register.ejs
@@ -1,5 +1,5 @@
 <% include ../partials/header.ejs %>
-
+    <!--Abdul Shukor:ID 300919831-->
 <main class="container">
     <% if(messages.length > 0) { %>
         <div class="alert alert-danger">
