--- a/server/views/contacts/index.ejs
+++ b/server/views/contacts/index.ejs
@@ -1,5 +1,5 @@
 <% include ../partials/header.ejs %>
-
+<!--Abdul Shukor:ID 300919831-->
     <div class="container">
         <div class="row">
             <div class="col-md-offset-3 col-md-6">
