--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -1,5 +1,5 @@
 <% include ./partials/header.ejs %>
-
+    <!--Abdul Shukor:ID 300919831-->
     <div class="container">
       <div class="jumbotron">
         <h1 class="display-4">Welcome to <%= title %></h1>
