Modified login pages

--- a/client/src/app/pages/register/register.component.html
+++ b/client/src/app/pages/register/register.component.html
@@ -35,9 +35,9 @@
                     id="displayName" required autocomplete="off">
                 </fieldset>
                 <fieldset class="form-group text-right">
-                    <input type="submit" class="btn btn-success" value="Register">
-                    <a routerLink="/home">
-                        <input type="button" class="btn btn-warning" value="Cancel">
+                    <input type="submit" class="btn btn-primary" value="Register">
+                    <a routerLink="/home">&nbsp;
+                        <input type="button" class="btn btn-info" value="Cancel">
                     </a>
                 </fieldset>
             </form>
