--- a/client/src/app/pages/login/login.component.html
+++ b/client/src/app/pages/login/login.component.html
@@ -24,9 +24,9 @@
                   <a routerLink="/register">Register Here</a>
               </fieldset>
               <fieldset class="form-group text-right">
-                  <input type="submit" class="btn btn-success" value="Login">
-                  <a routerLink="/home">
-                      <input type="button" class="btn btn-warning" value="Cancel">
+                  <input type="submit" class="btn btn-primary" value="Login">
+                  <a routerLink="/home">&nbsp;
+                      <input type="button" class="btn btn-info" value="Cancel">
                   </a>
               </fieldset>
           </form>
