added more content to login and register pages

--- a/client/src/app/pages/register/register.component.html
+++ b/client/src/app/pages/register/register.component.html
@@ -4,7 +4,7 @@
    <main class="container">
     <div class="row">
         <div class="col-md-offset-4 col-md-4">
-            <h1>Please Register</h1>
+            <h2>Please Register Here</h2>
             <form autocomplete="off" (submit)="onRegisterSubmit()">
                 <fieldset class="form-group">
                     <label for="username">Username:</label>
