--- a/client/src/app/pages/login/login.component.html
+++ b/client/src/app/pages/login/login.component.html
@@ -21,7 +21,7 @@
                   name="password" placeholder="Enter Password"
                   id="password" required autocomplete="off">
                   or
-                  <a routerLink="/register">Register Here</a>
+                  <a routerLink="/register">Please Register Here</a>
               </fieldset>
               <fieldset class="form-group text-right">
                   <input type="submit" class="btn btn-primary" value="Login">
