--- a/client/src/app/contacts/contact-details/contact-details.component.html
+++ b/client/src/app/contacts/contact-details/contact-details.component.html
@@ -38,9 +38,9 @@
                   required>
               </div>
 
-              <button type="submit" class="btn btn-primary">
-              <i class="fas fa-edit"></i> {{ title }}</button>
-              <a routerLink="/contact/contact-list" class="btn btn-warning">
+              <button type="submit" class="btn btn-secondary">
+              <i class="fas fa-edit"></i> {{ title }}</button>&nbsp;
+              <a routerLink="/contact/contact-list" class="btn btn-info">
                   <i class="fas fa-undo"></i> Cancel</a>
           </form>
 
