--- a/client/src/app/contacts/contact-list/contact-list.component.html
+++ b/client/src/app/contacts/contact-list/contact-list.component.html
@@ -2,8 +2,8 @@
   <div class="row">
       <div class="col-md-offset-3 col-md-6">
           <h1>Contact List</h1>
-          <a class="btn btn-primary" routerLink="/contact/contact-list/add" role="button">
-          <i class="fas fa-plus-circle"></i> Add a Contact</a>
+          <a class="btn btn-info" routerLink="/contact/contact-list/add" role="button">
+            <i class="fas fa-lg fa-plus"></i> Add a Contact</a>
           <br>
           <table class="table table-bordered table-striped table-hover">
               <!-- Header Row-->
@@ -23,12 +23,12 @@
 
                       <td class="text-center">
                       <a routerLink="/contact/contact-list/edit/{{ contact._id }}"
-                          class="btn btn-primary"><i class="fas fa-pencil-alt"></i> Edit</a>
+                          class="btn btn-info"><i class="fas fa-edit"></i> Edit</a>
                       </td>
 
                       <td class="text-center">
                               <a routerLink="/contact/contact-list/delete/{{ contact._id }}" (click)="onDeleteClick()"
-                                  class="btn btn-danger"><i class="fas fa-trash-alt"></i> Delete</a>
+                                  class="btn btn-danger"><i class="fas fa-trash"></i> Delete</a>
                               </td>
                   </tr>
           </table>
