--- a/server/views/contacts/add.ejs
+++ b/server/views/contacts/add.ejs
@@ -34,9 +34,9 @@
                     required>
                 </div>
 
-                <button type="submit" class="btn btn-primary">
+                <button type="submit" class="btn btn-secondary">
                 <i class="fas fa-edit"></i> Submit</button>
-                <a href="/contact-list" class="btn btn-warning">
+                <a href="/contact-list" class="btn btn-info">
                     <i class="fas fa-undo"></i> Cancel</a>
             </form>
 
