--- a/client/src/app/pages/about/about.component.html
+++ b/client/src/app/pages/about/about.component.html
@@ -7,9 +7,9 @@
 
       <p class="lead">
         <br>
-        Hi there! I’m Abdul Shukor from Toronto, Canada. I’m doing software engineering technology three years program at
-          Centennial College. Currently, I’m in the last semester of the program, and I will be graduating in 2019-04-23 with
-           honours designation. I am a passionate individual who is driven by curiosity and a desire to learn, embracing
+        Hi there! I’m Abdul Shukor from Toronto, Canada. I have done  software engineering technology three years program at
+          Centennial College. I  graduated  in 2019-04 with
+           honours designation. In addition, I am ISTQB Certfied Tester. I am a passionate individual who is driven by curiosity and a desire to learn, embracing
            inclusion and committed to leading high performing teams in a culture of excellence with integrity and has a
            practical approach to problem-solving and a drive to see things through to completion. Besides, I am a fast
            learner and an excellent listener. I have excellent interpersonal and communication skills and I am a very
@@ -44,17 +44,21 @@
       Risk Management Plan.</li>
     <li>Development Tools: Microsoft Expression Web, Visual Studio, Visual Studio Code, Android Studio,
     Eclipse, Visual Paradigm, Visio, IntelliJ.</li>
+    <li>Microsoft office: MS Word, MS Excel, MS PowerPoint, MS Access</li>
+    <li>JIRA</li>
 
 
 
      <h5 class="display-6">I have done some professional online courses form Udemy.com.</h5>
          <ol>
-          <li>C# (Completed, Dec.2017)</li>
-          <li>Oracle SQL (Completed,  May.2017)</li>
-          <li>Oracle PL/SQL (Completed, Nov.2017)</li>
-          <li>Java (Completed, Feb.2019)</li>
-          <li>Selenium WebDriver with Java - Basics to Advanced (Completed,  Aug.2018) </li>
-         </ol>
+          <li><strong>ISTQB Certified Tester (July. 2019)</strong></li>
+          <li>C# (Completed, Dec. 2017)</li>
+          <li>Oracle SQL (Completed,  May. 2017)</li>
+          <li>Oracle PL/SQL (Completed, Nov. 2017)</li>
+          <li>Java (Completed, Feb. 2019)</li>
+          <li>Selenium WebDriver with Java - Basics to Advanced (Completed,  Aug. 2018) </li>
+          <li>Data Structure and Algorithms (using Java) (Completed Apr. 2019)</li>
+        </ol>
      <!--the button for downloading my resume-->
 <h5>Download my updated resume</h5>
 <a href="/assets/documents/abdul_shukor_resume.pdf" download><button class="btn btn-outline-primary"><i class="fa fa-download"></i>&nbsp; Resume</button></a>
