--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -1,25 +1,27 @@
-<!--Abdul Shukor
-   StudentID300919831
-   Date:2019-03-30-->
-
 <div class="container">
   <div class="jumbotron">
-    <h4>Hello, Welcome to <b>Abdul Shukor</b> Portfolio Website!</h4>
+<br>
+    <h4>Hello,</h4>
+
+    <h4>
+      Welcome to <b>Abdul Shukor</b> Portfolio Website!
+    </h4>
+
+
 
     <p class="lead">
-      The purpose of this website is to advertise myself . This site covers:
+      The purpose of this website is to advertise myself. This site covers:
     </p>
     <ol>
-      <li>Biography about myself. <a routerLink="/about">About Me</a></li>
-      <li>My Projects. <a routerLink="/projects">Projects</a></li>
-      <li>Services that I offer. <a routerLink="/services">Services</a></li>
-      <li>Contact me Page. <a routerLink="/contact">Contact</a></li>
+      <li>Biography about myself. <a href='/about'>About Me</a> </li>
+      <li>My Projects. <a href='/projects'>Projects</a></li>
+      <li>Services that I offer. <a href='/services'>Services</a></li>
+      <li>Contact me Page. <a href='/contact'>Contact</a></li>
     </ol>
 
-    <p class="lead">
-      To find out more about me, please navigate over to the
-      <a routerLink="/about">About Me</a> page.
 
+    <p class="lead">
+      To find out more about me, please navigate over to the <a href='/about'>About Me</a> page.
     </p>
     <hr class="my-9" />
 
