--- a/client/src/app/partials/footer/footer.component.html
+++ b/client/src/app/partials/footer/footer.component.html
@@ -8,16 +8,29 @@
 <div class="footer-copyright text-center  py-1"style="background-color: #000000 ;color:white;" ><h6>&copy; Abdul Shukor {{ year }}. All Rights Reserved</h6>
 </div>
 </div> -->
-<footer class="page-footer font-small mdb-color fixed-bottom lighten-3 pt-">
-  <div class="text-center py-1 " style="background-color: #000000;">
+<footer class="page-footer  fixed-bottom font-small mdb-color lighten-3">
+  <div class="text-center py-1 " style="background-color: #000000;" aria-hidden="true">
     <!--<a routerLink="/about" style="color:white">About Me</a>-->
     <a href="https://www.facebook.com"  target="_blank" title="Facebook Page" class="fa-lg"><i class="fab fa-facebook-square" style="color:white"></i></a>&nbsp;
     <a href="https://twitter.com" target="_blank" title="Twitter" class="fa-lg"> <i class="fab fa-twitter-square" style="color:white"></i></a>&nbsp;
     <a href="https://www.linkedin.com" target="_blank" title="Linkedin" class="fa-lg"> <i class="fab fa-linkedin" style="color:white"></i></a>
   </div>
   <div
-    class="footer-copyright text-center  py-1"
+    class="footer-copyright text-center"
     style="background-color: #000000 ;color:white;">
     &copy; Copyright {{ year }} Abdul Shukor. All Rights Reserved.
   </div>
 </footer>
+
+
+<!-- <div class="footer-copyright text-center  navbar-expand-lg navbar-dark bg-dark py-1 fixed-bottom navbar-light bg-light"
+  style="color:white background-color #000000;" aria-hidden="true">
+  <a href="https://www.facebook.com" target="_blank" title="Facebook Page" class="fa-lg"><i
+      class="fab fa-facebook-square" style="color:white"></i></a>&nbsp;
+  <a href="https://twitter.com" target="_blank" title="Twitter" class="fa-lg"> <i class="fab fa-twitter-square"
+      style="color:white"></i></a>&nbsp;
+  <a href="https://www.linkedin.com" target="_blank" title="Linkedin" class="fa-lg"> <i class="fab fa-linkedin"
+      style="color:white"></i></a>
+
+  <h6>&copy; Copyright {{ year }}. Mighty Max. All Rights Reserved.</h6>
+</div> -->
