--- a/client/src/app/partials/header/header.component.html
+++ b/client/src/app/partials/header/header.component.html
@@ -3,7 +3,7 @@
    StudentID300919831
    Date:2019-03-30-->
 <nav
-  class="navbar navbar-expand-lg navbar-dark "
+  class="navbar navbar-expand-lg navbar-dark fixed-top "
   style="background-color: #000000;"
 >
   <a class="navbar-brand" routerLink="/">
