updated home page

--- a/client/src/app/pages/about/about.component.html
+++ b/client/src/app/pages/about/about.component.html
@@ -7,9 +7,9 @@
 
       <p class="lead">
         <br>
-        Hi there! I’m Abdul Shukor from Toronto, Canada. I have done  software engineering technology three years program at
+        Hi there! I’m Abdul Shukor from Toronto, Canada. I have done  <strong>software engineering technology </strong> three years program at
           Centennial College. I  graduated  in 2019-04 with
-           honours designation. In addition, I am ISTQB Certfied Tester. I am a passionate individual who is driven by curiosity and a desire to learn, embracing
+           <strong>honours designation</strong>. In addition, I am <strong> ISTQB Certfied Tester</strong>. I am a passionate individual who is driven by curiosity and a desire to learn, embracing
            inclusion and committed to leading high performing teams in a culture of excellence with integrity and has a
            practical approach to problem-solving and a drive to see things through to completion. Besides, I am a fast
            learner and an excellent listener. I have excellent interpersonal and communication skills and I am a very
@@ -49,15 +49,15 @@
 
 
 
-     <h5 class="display-6">I have done some professional online courses form Udemy.com.</h5>
+     <h5 class="display-6">I have done the follwoing professional courses.</h5>
          <ol>
           <li><strong>ISTQB Certified Tester (July. 2019)</strong></li>
-          <li>C# (Completed, Dec. 2017)</li>
-          <li>Oracle SQL (Completed,  May. 2017)</li>
-          <li>Oracle PL/SQL (Completed, Nov. 2017)</li>
-          <li>Java (Completed, Feb. 2019)</li>
-          <li>Selenium WebDriver with Java - Basics to Advanced (Completed,  Aug. 2018) </li>
-          <li>Data Structure and Algorithms (using Java) (Completed Apr. 2019)</li>
+          <li>C# (Completed, Dec. 2017 Udemy)</li>
+          <li>Oracle SQL (Completed,  May. 2017 Udemy)</li>
+          <li>Oracle PL/SQL (Completed, Nov. 2017 Udemy)</li>
+          <li>Java (Completed, Feb. 2019 Udemy)</li>
+          <li>Selenium WebDriver with Java - Basics to Advanced (Completed,  Aug. 2018 Udemy) </li>
+          <li>Data Structure and Algorithms (using Java) (Completed Apr. 2019 Udemy)</li>
         </ol>
      <!--the button for downloading my resume-->
 <h5>Download my updated resume</h5>
