--- a/client/src/app/pages/login/login.component.html
+++ b/client/src/app/pages/login/login.component.html
@@ -3,6 +3,8 @@
    StudentID300919831
    Date:2019-03-30-->
 <main class="container">
+  <div class="jumbotron">
+
   <div class="row">
       <div class="col-md-offset-4 col-md-4">
           <h1>Please Login</h1>
@@ -31,5 +33,6 @@
               </fieldset>
           </form>
       </div>
+  </div>
   </div>
 </main>
