--- a/client/src/app/contacts/contact-list/contact-list.component.html
+++ b/client/src/app/contacts/contact-list/contact-list.component.html
@@ -1,38 +1,42 @@
 <div class="container">
-  <div class="row">
+  <div class="jumbotron">
+
+
+    <div class="row">
       <div class="col-md-offset-3 col-md-6">
-          <h1>Contact List</h1>
-          <a class="btn btn-info" routerLink="/contact/contact-list/add" role="button">
-            <i class="fas fa-lg fa-plus"></i> Add a Contact</a>
-          <br>
-          <table class="table table-bordered table-striped table-hover">
-              <!-- Header Row-->
-              <tr>
-                  <th class="text-center">First Name</th>
-                  <th class="text-center">Last Name</th>
-                  <th class="text-center">Age</th>
-                  <th class="text-center"></th>
-                  <th class="text-center"></th>
-              </tr>
+        <h1>Contact List</h1>
+        <a class="btn btn-info" routerLink="/contact/contact-list/add" role="button">
+          <i class="fas fa-lg fa-plus"></i> Add a Contact</a>
+        <br>
+        <table class="table table-bordered table-striped table-hover">
+          <!-- Header Row-->
+          <tr>
+            <th class="text-center">First Name</th>
+            <th class="text-center">Last Name</th>
+            <th class="text-center">Age</th>
+            <th class="text-center"></th>
+            <th class="text-center"></th>
+          </tr>
 
-              <!-- Repeatable Template Row -->
-                  <tr *ngFor="let contact of contacts">
-                      <td class="text-center">{{ contact.firstName }}</td>
-                      <td class="text-center">{{ contact.lastName }}</td>
-                      <td class="text-center">{{ contact.age }}</td>
+          <!-- Repeatable Template Row -->
+          <tr *ngFor="let contact of contacts">
+            <td class="text-center">{{ contact.firstName }}</td>
+            <td class="text-center">{{ contact.lastName }}</td>
+            <td class="text-center">{{ contact.age }}</td>
 
-                      <td class="text-center">
-                      <a routerLink="/contact/contact-list/edit/{{ contact._id }}"
-                          class="btn btn-info"><i class="fas fa-edit"></i> Edit</a>
-                      </td>
+            <td class="text-center">
+              <a routerLink="/contact/contact-list/edit/{{ contact._id }}" class="btn btn-info"><i
+                  class="fas fa-edit"></i> Edit</a>
+            </td>
 
-                      <td class="text-center">
-                              <a routerLink="/contact/contact-list/delete/{{ contact._id }}" (click)="onDeleteClick()"
-                                  class="btn btn-danger"><i class="fas fa-trash"></i> Delete</a>
-                              </td>
-                  </tr>
-          </table>
+            <td class="text-center">
+              <a routerLink="/contact/contact-list/delete/{{ contact._id }}" (click)="onDeleteClick()"
+                class="btn btn-danger"><i class="fas fa-trash"></i> Delete</a>
+            </td>
+          </tr>
+        </table>
 
       </div>
+    </div>
   </div>
 </div>
