--- a/client/src/app/pages/services/services.component.html
+++ b/client/src/app/pages/services/services.component.html
@@ -3,7 +3,12 @@
    Date:2019-03-30-->
 <div class="container">
     <div class="jumbotron">
-        <h4 class=display-5><b>I provide the following services.</b></h4>
+
+      <br>
+        <h4>I provide various types of services. Some of those services are:</h4>
+      <br>
+
+        <!-- <h4 class=display-5><b>I provide the following services.</b></h4> -->
         <div class="row">
           <!--Grid column-->
       <div class="col-lg-4 col-md-12 mb-4">
