update about page

--- a/client/src/app/pages/about/about.component.html
+++ b/client/src/app/pages/about/about.component.html
@@ -44,14 +44,15 @@
       Risk Management Plan.</li>
     <li>Development Tools: Microsoft Expression Web, Visual Studio, Visual Studio Code, Android Studio,
     Eclipse, Visual Paradigm, Visio, IntelliJ.</li>
-    <li>Microsoft office: MS Word, MS Excel, MS PowerPoint, MS Access</li>
+    <li>Microsoft Office: MS Word, MS Excel, MS PowerPoint, MS Access</li>
     <li>JIRA</li>
 
 
 
-     <h5 class="display-6">I have done the follwoing professional courses.</h5>
+     <h5 class="display-6">I have done the follwoing professional Certificates &nbsp;<i class="fa fa-certificate" aria-hidden="true"></i></h5>
          <ol>
-          <li><strong>ISTQB Certified Tester (July. 2019)</strong></li>
+          <li><strong>ISTQB Certified Tester (July. 2019)</strong>&nbsp;<img src="\assets\images\istqb.jpg" height="25" width="65" />
+          </li>
           <li>C# (Completed, Dec. 2017 Udemy)</li>
           <li>Oracle SQL (Completed,  May. 2017 Udemy)</li>
           <li>Oracle PL/SQL (Completed, Nov. 2017 Udemy)</li>
