updated project page content

--- a/client/src/app/pages/projects/projects.component.html
+++ b/client/src/app/pages/projects/projects.component.html
@@ -3,49 +3,75 @@
    Date:2019-03-30-->
 <div class="container">
   <div class="jumbotron">
-        <div class="alert  alert-secondary" role="alert"><h4>1. Flash Chat App</h4></div>
-        <img src="\assets\images\andriod.jpg" class="img-fluid" alt="Responsive image" />
+    <br>
 
-        <p class="lead">
-          <br>
-          I created a Flash Chat app, which is a real massaging app like WhatsApp or Facebook messenger. For creating this app, I used Java, XML, and google Firebase database for storing user SMS and credentials. I developed this app using the android studio. I
-          developed this project by myself and the purpose of this app to create something comparable to Facebook massager.
-        </p>
-        <div class="alert  alert-secondary" role="alert"><h4>2. WorkForce API </h4></div>
-            <!-- fluid make images responsive for differnt types of screen-->
+    <div class="alert  alert-secondary" role="alert">
+      <h4>1. Flash Chat App</h4>
+    </div>
+    <img src="\assets\images\andriod.jpg" class="img-fluid" alt="Responsive image" />
 
-        <img src="\assets\images\workforce.jpg" class="img-fluid" alt="Responsive image" />
-
-        <p class="lead">
-          <br>
-            I created a WorkForce web API for unemployment educated people who are looking for a job.
-          The WorkForce API is securely accessing unemployed employee data from AWS-RDS database.
-          The potential customer of the WorkForce is an employer, but it can be consumedfor many
-          different purposes. For developing WorkForce, I used these technologies, C#.Net Core2.1,
-          AWS-RDS, swagger, JSON, XML, Postman, Apigee API management platform, and hosted on AWS
-          Elastic Beanstalk. My role was creating API, documenting, testing
-          and securing API through Apigee API Security management.
-        </p>
-
-        <div class="alert  alert-secondary" role="alert"><h4>3. eAppointment </h4></div>
-
-        <h5> ERD Diagram</h5><br>
+    <p class="lead">
+      <br>
+      I created a Flash Chat app, which is a real massaging app like WhatsApp or Facebook messenger. For creating this
+      app, I used Java, XML, and google Firebase database for storing user SMS and credentials. I developed this app
+      using the android studio. I
+      developed this project by myself and the purpose of this app to create something comparable to Facebook massager.
+    </p>
+    <div class="alert  alert-secondary" role="alert">
+      <h4>2. WorkForce API </h4>
+    </div>
     <!-- fluid make images responsive for differnt types of screen-->
 
-        <img src="\assets\images\ERDeAppointment.jpg"class="img-fluid" alt="Responsive image" />
-        <h5> Domain Class Diagram</h5><br>
+    <img src="\assets\images\workforce.jpg" class="img-fluid" alt="Responsive image" />
+
+    <p class="lead">
+      <br>
+      I created a WorkForce web API for unemployment educated people who are looking for a job.
+      The WorkForce API is securely accessing unemployed employee data from AWS-RDS database.
+      The potential customer of the WorkForce is an employer, but it can be consumedfor many
+      different purposes. For developing WorkForce, I used these technologies, C#.Net Core2.1,
+      AWS-RDS, swagger, JSON, XML, Postman, Apigee API management platform, and hosted on AWS
+      Elastic Beanstalk. My role was creating API, documenting, testing
+      and securing API through Apigee API Security management.
+    </p>
+
+    <div class="alert  alert-secondary" role="alert">
+      <h4>3. eAppointment </h4>
+    </div>
+
+    <h5> ERD Diagram</h5><br>
     <!-- fluid make images responsive for differnt types of screen-->
 
-        <img src="\assets\images\domainCD.jpg" class="img-fluid" alt="Responsive image" />
+    <img src="\assets\images\ERDeAppointment.jpg" class="img-fluid" alt="Responsive image" />
+    <h5> Domain Class Diagram</h5><br>
+    <!-- fluid make images responsive for differnt types of screen-->
 
-        <p class="lead">
-          <br>
-            It was a software development project, designed for an online doctor appointment application with
-            eight subsystems which will enable users to find the nearest doctors and at the earliest possible time to
-            set doctor’s appointments. Using, UML Language, and Agile methodology. It was a group project and my role was
-            creating use case diagram, use case description, ERD diagram, and domain class diagram.
-        </p>
-       <hr class="my-9"/>
-   </div>
+    <img src="\assets\images\domainCD.jpg" class="img-fluid" alt="Responsive image" />
+
+    <p class="lead">
+      <br>
+      It was a software development project, designed for an online doctor appointment application with
+      eight subsystems which will enable users to find the nearest doctors and at the earliest possible time to
+      set doctor’s appointments. Using, UML Language, and Agile methodology. It was a group project and my role was
+      creating use case diagram, use case description, ERD diagram, and domain class diagram.
+    </p>
+
+
+    <div class="alert  alert-secondary" role="alert">
+      <h4>4. Favorite Books</h4>
+    </div>
+    <img src="\assets\images\books.jpg" class="img-fluid" alt="Responsive image" />
+
+    <p class="lead">
+      <br>
+      Created favorite books application with user authentication. For developing the application, I used
+      node.js, express, ejs, mLab, CSS, Bootstrap, GitHub and hosted on herokuapp.com.
+      <br>
+      <strong>comp308w2019midterm30091983.herokuapp.com</strong>
+
+    </p>
+
+    <hr class="my-9" />
+  </div>
 
 </div>
