--- a/client/src/app/pages/services/services.component.html
+++ b/client/src/app/pages/services/services.component.html
@@ -5,7 +5,7 @@
     <div class="jumbotron">
 
       <br>
-        <h4>I provide various types of services. Some of those services are:</h4>
+        <h4> <i class="fa fa-building" aria-hidden="true"></i> I provide various types of services. Some of those services are:</h4>
       <br>
 
         <!-- <h4 class=display-5><b>I provide the following services.</b></h4> -->
